content/_generated-doc/2.7/config/quarkus-debug-debug-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-debug-debug-config_configuration]]link:#quarkus-debug-debug-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-debug-debug-config_quarkus.debug.reflection]]`link:#quarkus-debug-debug-config_quarkus.debug.reflection[quarkus.debug.reflection]`

[.description]
--
If set to true, writes a list of all reflective classes to META-INF
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-debug-debug-config_quarkus.debug.generated-classes-dir]]`link:#quarkus-debug-debug-config_quarkus.debug.generated-classes-dir[quarkus.debug.generated-classes-dir]`

[.description]
--
If set to a directory, all generated classes will be written into that directory
--|string 
|

|===