content/_generated-doc/2.16/config/quarkus-debug-debug-config.adoc

:summaryTableId: quarkus-debug-debug-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-debug-debug-config_configuration]]link:#quarkus-debug-debug-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-debug-debug-config_quarkus.debug.reflection]]`link:#quarkus-debug-debug-config_quarkus.debug.reflection[quarkus.debug.reflection]`

[.description]
--
If set to true, writes a list of all reflective classes to META-INF

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DEBUG_REFLECTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DEBUG_REFLECTION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-debug-debug-config_quarkus.debug.generated-classes-dir]]`link:#quarkus-debug-debug-config_quarkus.debug.generated-classes-dir[quarkus.debug.generated-classes-dir]`

[.description]
--
If set to a directory, all generated classes will be written into that directory

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DEBUG_GENERATED_CLASSES_DIR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DEBUG_GENERATED_CLASSES_DIR+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-debug-debug-config_quarkus.debug.transformed-classes-dir]]`link:#quarkus-debug-debug-config_quarkus.debug.transformed-classes-dir[quarkus.debug.transformed-classes-dir]`

[.description]
--
If set to a directory, all transformed classes (e.g. Panache entities) will be written into that directory

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DEBUG_TRANSFORMED_CLASSES_DIR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DEBUG_TRANSFORMED_CLASSES_DIR+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-debug-debug-config_quarkus.debug.generated-sources-dir]]`link:#quarkus-debug-debug-config_quarkus.debug.generated-sources-dir[quarkus.debug.generated-sources-dir]`

[.description]
--
If set to a directory, ZIG files for generated code will be written into that directory. 
A ZIG file is a textual representation of the generated code that is referenced in the stacktraces.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DEBUG_GENERATED_SOURCES_DIR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DEBUG_GENERATED_SOURCES_DIR+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===